--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
-<h1> Sai Balaram Korrapati  </h1>
+<html>
 
+<head>
+Sai Balaram Korrapati
+</head>
 
-<img src="pic.jpg"> 
+<body>
 
+	<img src="pic.jpg" />
+</body>
+
+</html>
 
